# Media-Manager-Rygel-LMS-Plugin

./: CMakeLists.txt  mm-lms.plugin  rygel-lms-album.vala  rygel-lms-albums.vala  rygel-lms-artist.vala  rygel-lms-artists.vala  rygel-lms-category-container.vala  rygel-lms-database.vala  rygel-lms-dbus-interfaces.vala  rygel-lms-fs-browser.vala  rygel-lms-genre.vala  rygel-lms-genres.vala  rygel-lms-playlists.vala  rygel-lms-plugin.vala  rygel-lms-root-container.vala  rygel-lms-sorted-tracks.vala  rygel-lms-tracks.vala
packaging/: .media-manager.spec.swp  rygel-lms-plugin.spec
